--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="himym.html">How I Met Your Mother</a></li>
+            <li><a href="HIMYM.htmlpr">How I Met Your Mother</a></li>
             <li><a href="pratele.html">Friends</a></li>
         </ul>
     </nav>
