--- a/index.html
+++ b/index.html
@@ -3,24 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oblíbené Seriály</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="serialy.css">
+    <title>Dinosauři</title>
+    <link rel="stylesheet" href="dinosauri.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-    <header>
-        <h1>Oblíbené Seriály</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="HIMYM.htmlpr">How I Met Your Mother</a></li>
-            <li><a href="pratele.html">Friends</a></li>
-        </ul>
-    </nav>
-
-    <footer>
-        <p>&copy; 2025 Seriály. Všechna práva vyhrazena.</p>
-    </footer>
+    <h1>Dinosauři</h1>
+    <div class="container">
+        <div class="card">
+            <h2>Xenotarsosaurus</h2>
+            <p>Masožravý dinosaurus z Argentiny.</p>
+            <a href="https://cs.wikipedia.org/wiki/Xenotarsosaurus" target="_blank">Více info</a>
+        </div>
+        <div class="card">
+            <h2>Yandusaurus</h2>
+            <p>Býložravý dinosaurus z Číny.</p>
+        </div>
+        <div class="card">
+            <h2>Zuniceratops</h2>
+            <p>Jeden z prvních rohatých dinosaurů.</p>
+            <img src="https://th.bing.com/th/id/OIP.dy59G9EgA_TMCBF695LHjAHaEM?rs=1&pid=ImgDetMain" alt="Zuniceratops">
+        </div>
+        <div class="card">
+            <h2>Allosaurus</h2>
+            <p>Velký dravý dinosaurus z jury.</p>
+        </div>
+        <div class="card">
+            <h2>Brachiosaurus</h2>
+            <p>Dlouhokrký býložravec.</p>
+        </div>
+    </div>
 </body>
 </html>
