--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinosauři</title>
-    <link rel="stylesheet" href="dinosauri.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Document</title>
 </head>
 <body>
+    <iframe src="https://docs.google.com/spreadsheets/d/1wQLWoF2wHrm_oQG1tZt7O04qd7AmrtOv/edit?usp=sharing&ouid=113732688689872787754&rtpof=true&sd=true" width="100%" height="600px" style="border: none;"></iframe>
     <h1>Dinosauři</h1>
     <div class="container">
         <div class="card">
