--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/spreadsheets/d/1wQLWoF2wHrm_oQG1tZt7O04qd7AmrtOv/edit?usp=sharing&ouid=113732688689872787754&rtpof=true&sd=true" width="100%" height="600px" style="border: none;"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/124b7xkeIYdiEbODRkB_YJHokv4UMaMbsDY0Ua1d9pwc/edit?usp=sharing" width="100%" height="600px" style="border: none;"></iframe>
     <h1>Dinosauři</h1>
     <div class="container">
         <div class="card">
