--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/spreadsheets/d/124b7xkeIYdiEbODRkB_YJHokv4UMaMbsDY0Ua1d9pwc/edit?usp=sharing" width="100%" height="600px" style="border: none;"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRgQJzKlwcYNqyyovXv2WZe57nk57bw0CIcVa3fN-tQxt8hvs_Yp_0iv8oXu9Ny45dSW-3sYMS0RlfW/pubhtml?gid=988418350&single=true" width="100%" height="600px" style="border: none;"></iframe>
     <h1>Dinosauři</h1>
     <div class="container">
         <div class="card">
