--- a/DOTAZNIK.HTML
+++ b/DOTAZNIK.HTML
@@ -39,4 +39,4 @@
         <a href="https://example.com/dotaznik" target="_blank">Otevřít dotazník</a>
     </div>
 </body>
-</html>
+</html>https://docs.google.com/spreadsheets/d/e/2PACX-1vQNBoRpBH_2CSAglNVN-TCuSeE3tPmeBLtX65HVuZKqDGWxIs40R4z5O4XzeovHZiWA0GA8vfHT3MWX/pubchart?oid=1118921005&format=image
